# snakemake_toolbox

./: .gitignore  README.md  justfile  pyproject.toml  run_pipeline.sh
data/day5/: A.txt  B.txt
workflow/: Snakefile
workflow/env/: notebook.yml
workflow/notebooks/: capitalize.ipynb
workflow/scripts/: combine.py  plot.R
xarray_example/: xarray_notebook.ipynb
